[gd_scene load_steps=2 format=3 uid="uid://dd6bilswadpa8"]

[ext_resource type="Script" uid="uid://r7xjwebp08n3" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_yqeox")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LeftContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 22

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/LeftContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LeftContainer/VBoxContainer2"]
layout_mode = 2
text = "Nr. of Sides"

[node name="SidesInput" type="LineEdit" parent="MarginContainer/LeftContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "5"

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/LeftContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LeftContainer/VBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Nr. of Subdivisions"

[node name="SubDivsInput" type="LineEdit" parent="MarginContainer/LeftContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "3"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LeftContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
text = "Radius"

[node name="RadiusInput" type="LineEdit" parent="MarginContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "40"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/LeftContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LeftContainer/VBoxContainer3"]
layout_mode = 2
text = "Offset potential (px)"

[node name="OffsetInput" type="LineEdit" parent="MarginContainer/LeftContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "20"

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/LeftContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LeftContainer/VBoxContainer4"]
layout_mode = 2
text = "inner radius ratio"

[node name="RatioInput" type="LineEdit" parent="MarginContainer/LeftContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "5"

[node name="CalcButton" type="Button" parent="MarginContainer/LeftContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Calculate"

[node name="RngButton" type="Button" parent="MarginContainer/LeftContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Calculate Random"

[node name="RightContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/RightContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/RightContainer/VBoxContainer"]
layout_mode = 2
text = "Test Label"

[connection signal="pressed" from="MarginContainer/LeftContainer/CalcButton" to="." method="_on_calc_button_pressed"]
[connection signal="pressed" from="MarginContainer/LeftContainer/RngButton" to="." method="_on_rng_button_pressed"]
